can connect to database now
